--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="app-title">
-            <p>Weather Report</p>
+            <p>Weather App</p>
         </div>
         <div class="notification"></div>
         <div class="weather-container">
